Fix: CLS error, active btns, text analysis error - space counting and preview overflow errors

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,6 @@ code {
     font-weight: normal;
 }
 
-.footer > * {
+.footer > p > a {
     text-decoration-line: none;
 }
